fixed alignment and padding issues

--- a/src/components/info-callout/info-callout.styles.scss
+++ b/src/components/info-callout/info-callout.styles.scss
@@ -7,6 +7,20 @@
             display: flex;
             .inner {
                 margin: auto;
+                // border: 1px solid red;
+                padding: 1em;
+                display: flex;
+                flex-direction: column;
+                h1 {
+                    font-size: 40px;
+                    // margin: auto;
+                    margin-bottom: 20px;
+                }
+                p {
+                    // font-weight: bold;
+                    margin: auto;
+                    font-size: 25px;
+                }
                 button {
                     margin-top: 20px;
                     padding: 10px;
@@ -18,6 +32,7 @@
                     border: none;
                     border-radius: 5px;
                     cursor: pointer;
+                    display: none;
                 }
             }
         }
@@ -50,17 +65,20 @@
             .inner {
                 display: flex;
                 flex-direction: column;
-                h1,
                 p {
                     margin: auto;
                     text-align: center;
+                    font-size: 20px !important;
                 }
                 h1 {
-                    font-size: 30px;
+                    text-align: center;
+                    margin: auto;
+                    font-size: 25px !important;
                 }
                 button {
                     width: 70%!important;
                     margin: auto;
+                    display: block !important;
                 }
             }
         }
